syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/api/annotations.proto";
import "userapp-service.proto";

package net.proto;

option java_multiple_files = true;
option java_package = "dev.proto";

service UserAppGrpcQueryService {

  rpc ListUsers (google.protobuf.Empty) returns (ListUsersAppResponse) {
      option (google.api.http) = { get: "/api/v1/usersapp" };
  }
  rpc ListUsersPaginated (PaginationRequest) returns (ListUsersAppResponse) {
      option (google.api.http) = { get: "/api/v1/usersapp" };
  }
  rpc GetUser (GetUserAppRequest) returns (UserAppProto) {
      option (google.api.http) = { get: "/api/v1/usersapp/{email}" };
  }
}

message ListUsersAppResponse {
  repeated UserAppProto users = 1;
}

message PaginationRequest {
  int32 page = 1;
  int32 size = 2;
  string sortBy = 3;
  string sortDir = 4;
}

message GetUserAppRequest {
  string userAppId = 1;
}

