syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/api/annotations.proto";

package net.proto;

option java_multiple_files = true;
option java_package = "dev.proto";

message UserAppProto {
  string userAppId = 1;
  string email = 2;
  string name = 3; 
  string lastname = 4;
}

